erDiagram
    Academic {
        int id PK
        int academic_year
        int current_semester
        int active_curriculum_id FK
        boolean is_current
        string status "draft|active"
        json semester1_range
        json semester2_range
        json semester3_range
        json internship_registration
        json project_registration
        json internship_semesters
        json project_semesters
    }

    Curriculum {
        int curriculum_id PK
        string code UK
        string name
        string short_name
        int start_year
        int end_year
        boolean active
        int total_credits
        int major_credits
        int internship_base_credits
        int project_base_credits
        int project_major_base_credits
        int internship_major_base_credits
        boolean require_internship_before_project
    }

    StudentAcademicHistory {
        int id PK
        int student_id FK
        int academic_year
        int semester
        string status
        string note
    }

    Academic }o--|| Curriculum : "active curriculum"
    Student }o--|| Curriculum : "enrolled in"
    Student ||--o{ StudentAcademicHistory : "has"
